--- a/angular-frontend/src/app/Admin/entreprise/one-entreprise/one-entreprise.component.html
+++ b/angular-frontend/src/app/Admin/entreprise/one-entreprise/one-entreprise.component.html
@@ -1,22 +1,24 @@
 <div class="container">
-    <h2 class="text-center mt-5 mb-5">Entreprise Detail</h2>
-    <div class="card">
+  <h2 class="text-center mt-5 mb-5">Entreprise Detail</h2>
+  <div class="card">
     <div class="card-header">
-    <a class="btn btn-outline-info float-right"
-    routerLink="/admin/entreprise/get">Toutes les entreprises</a>
+      <a
+        class="btn btn-outline-info float-right"
+        routerLink="/admin/entreprise/get"
+        >Toutes les entreprises</a
+      >
     </div>
     <div class="card-body">
-    <b class="text-muted">Nom:</b>
-    <p>{{entreprise.nom}}</p>
-    <b class="text-muted">Addresse:</b>
-    <p>{{entreprise.address}}</p>
-    <b class="text-muted">Site web:</b>
-    <p>{{entreprise.url}}</p>
-    <b class="text-muted">E-mail:</b>
-    <p>{{entreprise.email}}</p>
-    <b class="text-muted">Telephone:</b>
-    <p>{{entreprise.tel}}</p>
+      <b class="text-muted">Nom:</b>
+      <p>{{ entreprise.nom }}</p>
+      <b class="text-muted">Addresse:</b>
+      <p>{{ entreprise.address }}</p>
+      <b class="text-muted">Site web:</b>
+      <p>{{ entreprise.url }}</p>
+      <b class="text-muted">E-mail:</b>
+      <p>{{ entreprise.email }}</p>
+      <b class="text-muted">Telephone:</b>
+      <p>{{ entreprise.tel }}</p>
     </div>
-    </div>
-    </div>
-    
+  </div>
+</div>
