--- a/angular-frontend/src/app/Admin/formation/create-formation/create-formation.component.html
+++ b/angular-frontend/src/app/Admin/formation/create-formation/create-formation.component.html
@@ -19,7 +19,7 @@
             <form action="">
               <div class="form-group">
                 <!-- NOM -->
-                <label for="nom">Nom Formation</label>
+                <label for="nom">Nom de Formation</label>
                 <!-- ngModel same name in ts -->
                 <input
                   [(ngModel)]="nom"
