s'inscrire dans une formation(frontend + backend)

--- a/angular-frontend/src/app/auth/component/login/login.component.html
+++ b/angular-frontend/src/app/auth/component/login/login.component.html
@@ -95,9 +95,9 @@
   <!--end::Submit button-->
   <!--begin::Sign up-->
   <div class="text-gray-500 text-center fw-semibold fs-6">
-    Not a Member yet?
+    Are you an extern trainer?
     <a
-      href="../../demo1/dist/authentication/layouts/overlay/sign-up.html"
+      
       class="link-primary"
       >Sign up</a
     >
