--- a/angular-frontend/src/app/Admin/formation/create-formation/create-formation.component.html
+++ b/angular-frontend/src/app/Admin/formation/create-formation/create-formation.component.html
@@ -35,7 +35,7 @@
 
                 <textarea
                   rows="4"
-                  [(ngModel)]="categorie"
+                  [(ngModel)]="formation.categorie"
                   class="form-control"
                   type="text"
                   name="categorie"
@@ -46,7 +46,7 @@
 
                 <label for="objectif">Objectif</label>
                 <input
-                  [(ngModel)]="objectif"
+                  [(ngModel)]="formation.objectif"
                   class="form-control"
                   type="text"
                   name="objectif"
@@ -56,7 +56,7 @@
                 <!-- Duree -->
                 <label for="duree">Duree</label>
                 <input
-                  [(ngModel)]="duree"
+                  [(ngModel)]="formation.duree"
                   class="form-control"
                   type="number"
                   name="duree"
@@ -66,7 +66,7 @@
                 <!-- Description -->
                 <label for="description">Description</label>
                 <input
-                  [(ngModel)]="description"
+                  [(ngModel)]="formation.description"
                   class="form-control"
                   type="text"
                   name="description"
@@ -76,7 +76,7 @@
                 <!-- Cout -->
                 <label for="cout">Cout</label>
                 <input
-                  [(ngModel)]="cout"
+                  [(ngModel)]="formation.cout"
                   class="form-control"
                   type="number"
                   name="cout"
@@ -86,7 +86,7 @@
 
                 <label for="dateDebut">Date de debut de formation:</label>
                 <input
-                  [(ngModel)]="dateDebut"
+                  [(ngModel)]="formation.dateDebut"
                   class="form-control"
                   type="date"
                   name="dateDebut"
@@ -96,7 +96,7 @@
 
                 <label for="dateFin">Date de fin de formation:</label>
                 <input
-                  [(ngModel)]="dateFin"
+                  [(ngModel)]="formation.dateFin"
                   class="form-control"
                   type="date"
                   name="dateFin"
@@ -110,6 +110,12 @@
                   id="formateur"
                   (change)="onFormateurSelected($event.target.value)"
                 >
+                <option
+                   
+                    [value]="0"
+                  >
+                    Ignore for now (null)
+                  </option>
                   <option
                     *ngFor="let formateur of formateurs"
                     [value]="formateur.id"
@@ -124,6 +130,12 @@
                   id="entreprise"
                   (change)="onEntrepriseSelected($event.target.value)"
                 >
+                <option
+                   
+                    [value]="0"
+                  >
+                    Ignore for now (null)
+                  </option>
                   <option
                     *ngFor="let entreprise of entreprises"
                     [value]="entreprise.id"
