fixed null bug in add formation + search by date

--- a/angular-frontend/src/app/Admin/formation/create-formation/create-formation.component.html
+++ b/angular-frontend/src/app/Admin/formation/create-formation/create-formation.component.html
@@ -114,7 +114,7 @@
                    
                     [value]="0"
                   >
-                    Ignore for now (null)
+                   - No Formateur : Select to change -
                   </option>
                   <option
                     *ngFor="let formateur of formateurs"
@@ -134,7 +134,7 @@
                    
                     [value]="0"
                   >
-                    Ignore for now (null)
+                   - No Entreprise : Select to change -
                   </option>
                   <option
                     *ngFor="let entreprise of entreprises"
