--- a/angular-frontend/src/app/Admin/formation/edit-formation/edit-formation.component.html
+++ b/angular-frontend/src/app/Admin/formation/edit-formation/edit-formation.component.html
@@ -104,6 +104,12 @@
                   id="formateur"
                   (change)="onFormateurSelected($event.target.value)"
                 >
+                <option *ngIf="formation.formateur === null"
+                   
+                [value]="0"
+              >
+                - No Formateur: Select to change -
+              </option>
                   <option *ngIf="formation.formateur !== null" [value]="formation.formateur.id">
                     {{ formation.formateur.name }}
                   </option>
@@ -121,6 +127,12 @@
                   id="entreprise"
                   (change)="onEntrepriseSelected($event.target.value)"
                 >
+                <option *ngIf="formation.entreprise === null"
+                   
+                [value]="0"
+              >
+               - No Entreprise : Select to change -
+              </option>
                   <option *ngIf="formation.entreprise !== null" [value]="formation.entreprise.id">
                     {{ formation.entreprise.nom }}
                   </option>
